# mvc

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  search.py
mvc/: main.py  search.py
storage/: userdata.json
